Sat Nov 20 06:54:22 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstsnifferscope.c:
	bse_source_queue_probe_request(): prioritize scope updates lower than
	gtk's redraw priority, to 1) allow timely updates, 2) prevent scope
	updates running behind playposition under heavy load scenarios.

Fri Nov 19 00:47:50 2004  Tim Janik  <timj@gtk.org>

	* docs/site-news.texi: announce release.

	* docs/site-oldnews.texi: rotation.

Thu Nov 18 18:07:21 2004  Tim Janik  <timj@gtk.org>

	* docs/site-about.texi: update on new features.

Thu Nov 18 14:05:26 2004  Tim Janik  <timj@gtk.org>

	* configure.in: released beast 0.6.3, binary 0, interface 0.

Wed Nov 17 01:20:56 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstbuseditor.c:
	* beast-gtk/bstsnifferscope.c:
	* beast-gtk/bstrecords.idl: added config options to turn off scopes and
	meters.

Tue Nov 16 14:59:40 2004  Tim Janik  <timj@gtk.org>

	* library/demo/partymonster.bse: added busses to properly mix up the
	individual channels. format update to 0.6.3.

Mon Nov 15 16:48:40 2004    <timj@birnet.org>

	* beast-gtk/gxk/gxkutils.c (browse_selection_handler): create extra path
	copies to account for callback-based path changes from 
	browse_selection_changed(). fixes invalid memory accesses.

Sun Nov 14 20:12:03 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstmain.c: improve responseness under load by handling glue
	layer events at the same priority as GUI events.

Fri Nov  5 02:32:57 2004  Tim Janik  <timj@gtk.org>

	* beast-gtk/gxk/gxkparam.[hc]: added gxk_param_add_grab_widget() for
	which pointer grabs cause undo grouping. implemented grouping hooks
	for parameter bindings. limited size-groups to 256.

	* beast-gtk/gxk/gxkparam-scale.c:
	* beast-gtk/gxk/gxkparam-spinner.c:
	* beast-gtk/bstparam-scale.c:
	* beast-gtk/bstparam-note-spinner.c: undo-group parameter changes
	across pointer grabs.

	* beast-gtk/bstparam.c: implemented undo grouping for proxy
	parameter bindings.
