@@ -1,3 +1,5 @@
+FIXME(release-critical):
+- implement Monitor Output Signal dialog
 TODO:
 - test engine block size changes (Subject: blocksize vs. cpu)
 - probes only need to deliver (sample frames) 25 times per second, and need not be continuous
