@@ -1,3 +1,15 @@
+Sat Nov 20 12:43:15 2004  Tim Janik  <timj@gtk.org>
+
+	* beast-gtk/bstmenus.c: use gxk_menu_attach_as_submenu() for proper 
+	submenu handling. allow creation of empty menus.
+
+	* beast-gtk/bstmenus.h: allow icons for submenu items.
+
+	* beast-gtk/bstsnetrouter.c: implemented output signal submenu.
+
+	* beast-gtk/icons/signal.png:
+	* beast-gtk/icons/signal.xcf: new icons.
+
 Sat Nov 20 06:54:22 2004  Tim Janik  <timj@gtk.org>
 
 	* beast-gtk/bstsnifferscope.c:
